--- a/OpenSky.API/EmailTemplates/ValidateEmail.html
+++ b/OpenSky.API/EmailTemplates/ValidateEmail.html
@@ -169,7 +169,7 @@
                                                                                                                 <tbody>
                                                                                                                     <tr>
                                                                                                                         <td style="font-size:6px; line-height:10px; padding:0px 0px 0px 0px;" valign="top" align="center">
-                                                                                                                            <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px;" width="95" alt="" data-proportionally-constrained="true" data-responsive="false" src="{LogoUrl}" height="33">
+                                                                                                                            <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px;" width="128" alt="opensky logo" data-proportionally-constrained="true" data-responsive="false" src="{LogoUrl}" height="128">
                                                                                                                         </td>
                                                                                                                     </tr>
                                                                                                                 </tbody>
